--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 html {
   /*background: url('./assets/background.png') no-repeat center center fixed;*/
-  background: url('https://imgs.search.brave.com/yD4uZ5dCSJ3_Jh3Ylw6TSQc_4YoAxdib03xI4H5IhAo/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9pbWFn/ZXMudW5zcGxhc2gu/Y29tL3Bob3RvLTE1/MTg3MDkyNjg4MDUt/NGU5MDQyYWY5ZjIz/P3E9ODAmdz0xMDAw/JmF1dG89Zm9ybWF0/JmZpdD1jcm9wJml4/bGliPXJiLTQuMC4z/Jml4aWQ9TTN3eE1q/QTNmREI4TUh4elpX/RnlZMmg4TW54OFky/RnpkR3hsZkdWdWZE/QjhmREI4Zkh3dw') no-repeat center center fixed;
+  background: url('https://github.com/munger7/js-dev-final-capstone-starter-whack-a-mole/blob/main/assets/castle.png?raw=true') no-repeat center center fixed;
   box-sizing: border-box;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -40,7 +40,7 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  cursor: url('https://imgs.search.brave.com/zyE8ytsNDKHSyd85X_QLbZTgmGRbuFEuDff0hc1i4C8/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9tZWRp/YS5pc3RvY2twaG90/by5jb20vaWQvMTMy/OTIxMTE0My92ZWN0/b3IvdmVjdG9yLWVt/b3RpY29uLWlsbHVz/dHJhdGlvbi1vZi1h/LWJvdy1hbmQtYXJy/b3cuanBnP3M9NjEy/eDYxMiZ3PTAmaz0y/MCZjPWd6VjNWcnBx/dEN1WHFNRE5QVEJl/U3FZV0RfNjY5QXVL/dEJ5RmMwN2JhdGs9'), pointer;
+  cursor: url('https://github.com/munger7/js-dev-final-capstone-starter-whack-a-mole/blob/main/assets/bow.png?raw=true'), pointer;
 }
 
 .hole {
@@ -52,11 +52,11 @@ h2 {
 .hole:after {
   display: block;
   /*background: url("./assets/hole.png") bottom center no-repeat;*/
-  background: url("https://imgs.search.brave.com/NC9nQ7G3JtxjokQ-yfdc4Mpsatm71XR4Ofx6Axzwiqw/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9zdGF0/aWMud2lraWEubm9j/b29raWUubmV0L21l/ZGlldmFsLWR5bmFz/dHkvaW1hZ2VzLzcv/NzYvUGFsaXNhZGUu/anBnL3JldmlzaW9u/L2xhdGVzdC9zY2Fs/ZS10by13aWR0aC1k/b3duLzIwMD9jYj0y/MDIwMTIzMDE0MzUx/MA") bottom center no-repeat;
+  background: url("https://github.com/munger7/js-dev-final-capstone-starter-whack-a-mole/blob/main/assets/palisade.png?raw=true") bottom center no-repeat;
   background-size:contain;
   content:'';
   width: 100%;
-  height: 100%;
+  height: 75%;
   position: absolute;
   bottom: -40%;
   z-index: 2;
@@ -64,8 +64,8 @@ h2 {
 }
 
 .mole {
-  /*background:url('./assets/mole.png') bottom center no-repeat;*/
-  background:url('https://imgs.search.brave.com/keWD8K_Wk3qWR9gnRIPquR3yRscugC8Tl3MeDbjFv34/rs:fit:860:0:0/g:ce/aHR0cHM6Ly9pLnBp/bmltZy5jb20vb3Jp/Z2luYWxzL2VjL2Qw/LzIxL2VjZDAyMTRh/MmVjNjEwN2ZhOGM3/NGUyOGU5MmE0YTlm/LmpwZw') bottom center no-repeat;
+  /* background:url('./assets/soldier.png') bottom center no-repeat; */
+  background:url('https://github.com/munger7/js-dev-final-capstone-starter-whack-a-mole/blob/main/assets/soldier.png?raw=true') bottom center no-repeat;
   background-size: 40%;
   position: absolute;
   top: 100%;
