--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ html {
 h1 {
   text-align: center;
   font-size: 90px;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
+  font-family: "Old London", "Ancient", cursive;
   color: white;
   -webkit-text-stroke: 2px black;
 }
