--- a/src/styles.css
+++ b/src/styles.css
@@ -40,7 +40,7 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
-  cursor: url("https://github.com/munger7/js-dev-final-capstone-starter-whack-a-mole/blob/main/assets/archery-icon-26013.png?raw=true"), pointer;
+  cursor: url("./assets/bow2.jpg"), pointer;
 }
 
 .hole {
